# llm-wiki

./: .gitignore  Cargo.toml  README.md  config.example.yaml  qdrant-server.example.yaml
.github/workflows/: ai-pr-reviewer.yml
data/raw/: mcp-usage.md  overview.md  rust-notes.md
scripts/: pre-commit.sh  setup-security.sh
src/: config.rs  main.rs
src/cache/: lsh.rs  mod.rs  semantic.rs  sync_state.rs
src/db/: qdrant.rs
src/mcp/: protocol.rs  server.rs
src/pipeline/: chunker.rs  embedder.rs  mod.rs  watcher.rs
