[package]
name = "llm-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
pulldown-cmark = "0.13.3"
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
notify = "8"
qdrant-client = "1"
# Tắt default-features để né OpenSSL, bật rustls-tls để build chéo dễ dàng
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "v5"] }
